#ifndef TIMER_HPP
#define TIMER_HPP

namespace acore::utility
{
    class Timer
    {
        public:
            Timer() = default;
            ~Timer() = default;
    };
}

#endif //TIMER_HPP
