#ifndef TRIGGER_HPP
#define TRIGGER_HPP

namespace acore::utility
{
    class Trigger
    {
        public:
            Trigger() = default;
            ~Trigger() = default;
    };
}

#endif //TRIGGER_HPP
